fix: fix pre code block overflow

--- a/generation/assets/style/_page_project_details_documentation.sass
+++ b/generation/assets/style/_page_project_details_documentation.sass
@@ -19,6 +19,7 @@ pre
   line-height: $line_height
   padding: 20px
   background-color: $tomitribe-lightergray
+  overflow: auto
   *
     font-family: courier, monospace
     font-size: 15px
